--- a/index.html
+++ b/index.html
@@ -7,22 +7,22 @@
   <link href="https://cdn.bootcdn.net/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" rel="stylesheet">
   <link href="https://cdn.bootcss.com/font-awesome/5.13.0/css/all.css"rel="stylesheet"/>
   <link rel="stylesheet" href="style.css">
-  <title>见到你，便是三行情诗</title>
+  <title>春风十里，不止好运</title>
   <link rel = "icon" href = "./img/title.ico">
 </head>
 <body>
   <div id="bac"></div>
   <div id="yinyan">
-    <h2 id="chunfeng">春风不及 樱花未至<br>你未出现 美好初始</h2>
+    <h2 id="chunfeng">你且听这荒唐 春秋走来一步步<br>你且迷这风浪 永远十八赶朝暮</h2>
     <div  id="play" class="btn1 fas fa-play">
       <div id="bji" class="bj"></div>
       <div class="fr" id="fronclick" onclick="funclick()"></div>
     </div> 
   </div>
-  <div id="boxup">&nbsp;&nbsp;生日快乐吖&nbsp;&nbsp;Best Wishes&nbsp;To 小慕🦌</div>
+  <div id="boxup">&nbsp;&nbsp;一岁一礼&nbsp;&nbsp;一寸欢喜&nbsp;To 小慕</div>
   <div id="box">
     <div id="boxl">F L</div>
-    <div id="boxr"><br><h3>听到了吗</h3><br>触击过后那一声钢琴键,这是我初见你时的心声。<br><br>我的世界已开满花，每天都想为你尝试一些我未见过的事.....你愿意陪我吗。<br><br>所以.....试着按动第一个a键吧。</div>
+    <div id="boxr"><br><h3>听到了吗</h3><br>触击过后那一声钢琴键,这是第一声生日祝福。<br><br>希望你的世界开满鲜花，每天尝试一些自己未见过的事.....<br><br>所以.....试着按动第一个a键吧。</div>
   </div>
   <div id="box1"></div>
   <script src="index.js"></script>
