--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>角色卡展示</title>
+    <title>小虎展示</title>
     <style>
-        body {
+		
+
+        body {	
             margin: 0;
             padding: 0;
             font-family: Arial, sans-serif;
@@ -70,7 +72,7 @@
 <body>
     <div class="container">
         <div class="character-card">
-            <img src="2/Preset_可乐-维多利亚.jpg" alt="维多利亚" class="character-image">
+            <img src="2/Preset_可乐-维多利亚.jpg" alt="维多利亚" class="character-image" id="character-image1">
             <div class="character-label">
                 <h1>ID：001</h1>
                 <h2>名字：郑怡云</h2>
@@ -78,39 +80,230 @@
                 <p>年龄：...</p>
                 <p>服装：...</p>
             </div>
-            <video id="myVideo" width="100%" height="auto" controls onended="hideVideo()">
+            <video id="myVideo1" width="100%" height="auto" controls onended="hideVideo('myVideo1', 'character-image1')">
+                <source src="1/1.mp4" type="video/mp4">
+                <!-- 添加其他视频格式的源文件 -->
+            </video>
+			
+			
+            <video id="myVideo2" width="100%" height="auto" controls onended="hideVideo('myVideo2', 'character-image1')">
+                <source src="1/2.mp4" type="video/mp4">
+                <!-- 添加其他视频格式的源文件 -->
+            </video>
+			
+			  <video id="myVideo3" width="100%" height="auto" controls onended="hideVideo('myVide3', 'character-image1')">
+                <source src="1/3.mp4" type="video/mp4">
+                <!-- 添加其他视频格式的源文件 -->
+            </video>
+			
+			  <video id="myVideo4" width="100%" height="auto" controls onended="hideVideo('myVideo4', 'character-image1')">
+                <source src="1/4.mp4" type="video/mp4">
+                <!-- 添加其他视频格式的源文件 -->
+            </video>
+			
+			  <video id="myVideo5" width="100%" height="auto" controls onended="hideVideo('myVideo5', 'character-image1')">
+                <source src="1/5.mp4" type="video/mp4">
+                <!-- 添加其他视频格式的源文件 -->
+            </video>
+			
+			  <video id="myVideo6" width="100%" height="auto" controls onended="hideVideo('myVideo6', 'character-image1')">
+                <source src="1/6.mp4" type="video/mp4">
+                <!-- 添加其他视频格式的源文件 -->
+            </video>
+			
+				  <video id="myVideo7" width="100%" height="auto" controls onended="hideVideo('myVideo7', 'character-image1')">
+                <source src="1/7.mp4" type="video/mp4">
+                <!-- 添加其他视频格式的源文件 -->
+            </video>
+			
+			  <video id="myVideo8" width="100%" height="auto" controls onended="hideVideo('myVideo8', 'character-image1')">
+                <source src="1/8.mp4" type="video/mp4">
+                <!-- 添加其他视频格式的源文件 -->
+            </video>
+			
+				  <video id="myVideo9" width="100%" height="auto" controls onended="hideVideo('myVideo9', 'character-image1')">
                 <source src="1/0.mp4" type="video/mp4">
                 <!-- 添加其他视频格式的源文件 -->
             </video>
-            <button id="playButton">播放视频</button>
+		
+		<style>
+    #buttonContainer {
+        position: fixed;
+        left: 50%;
+        bottom: 0;
+        transform: translateX(-50%);
+        display: flex;
+        align-items: center;
+        width: 1080px; /* 设置容器宽度 */
+    }
+
+    .arrow {
+        cursor: pointer;
+        font-size: 2em;
+        user-select: none;
+        color: #ffb6c1; /* 设置箭头颜色为浅粉色 */
+    }
+
+    .buttonWrapper {
+        display: flex;
+        overflow: hidden; /* 隐藏超出部分 */
+        width: 100%; /* 设置按钮容器宽度 */
+    }
+
+    .playButton {
+        width: 270px; /* 调整按钮宽度 */
+        height: 100px; /* 调整按钮高度 */
+        background-color: transparent;
+        border: none;
+        cursor: pointer;
+        flex: 0 0 auto; /* 防止按钮缩放 */
+    }
+
+    .playButton:hover {
+        transform: scale(1.1);
+    }
+</style>
+
+<div id="buttonContainer">
+    <div class="arrow" id="leftArrow">◀</div>
+    <div class="buttonWrapper">
+        <button class="playButton" id="playButton1"></button>
+        <button class="playButton" id="playButton2"></button>
+        <button class="playButton" id="playButton3"></button>
+        <button class="playButton" id="playButton4"></button>
+        <button class="playButton" id="playButton5"></button>
+        <button class="playButton" id="playButton6"></button>
+        <button class="playButton" id="playButton7"></button>
+        <button class="playButton" id="playButton8"></button>
+        <button class="playButton" id="playButton9"></button>
+    </div>
+    <div class="arrow" id="rightArrow">▶</div>
+</div>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/bodymovin/5.9.6/lottie.min.js"></script>
+<script>
+    // 初始化 Lottie 动画
+    const animations = [
+        { id: 'playButton1', path: '1/大笑虎.json' },
+        { id: 'playButton2', path: '1/晕圈虎.json' },
+        { id: 'playButton3', path: '1/酷盖虎.json' },
+        { id: 'playButton4', path: '1/亲亲虎.json' },
+        { id: 'playButton5', path: '1/睡觉虎.json' },
+        { id: 'playButton6', path: '1/喜欢虎.json' },
+        { id: 'playButton7', path: '1/委屈虎.json' },
+        { id: 'playButton8', path: '1/发怒虎.json' },
+        { id: 'playButton9', path: '1/震惊虎.json' }
+    ];
+
+    animations.forEach(animation => {
+        const anim = lottie.loadAnimation({
+            container: document.getElementById(animation.id), // 按钮容器
+            renderer: 'svg', // 渲染器类型
+            loop: true, // 是否循环播放
+            autoplay: false, // 不自动播放
+            path: animation.path // Lottie 动画 JSON 文件路径
+        });
+
+        const button = document.getElementById(animation.id);
+        button.addEventListener('mouseenter', () => {
+            anim.play(); // 鼠标悬停时播放动画
+        });
+
+        button.addEventListener('mouseleave', () => {
+            anim.stop(); // 鼠标移出时停止动画
+        });
+    });
+
+    // 实现箭头点击效果
+    const buttonWrapper = document.querySelector('.buttonWrapper');
+    const leftArrow = document.getElementById('leftArrow');
+    const rightArrow = document.getElementById('rightArrow');
+
+    leftArrow.addEventListener('click', (e) => {
+        e.stopPropagation(); // 阻止事件冒泡
+        buttonWrapper.scrollBy({
+            left: -270, // 向左移动一个按钮的宽度
+            behavior: 'smooth'
+        });
+    });
+
+    rightArrow.addEventListener('click', (e) => {
+        e.stopPropagation(); // 阻止事件冒泡
+        buttonWrapper.scrollBy({
+            left: 270, // 向右移动一个按钮的宽度
+            behavior: 'smooth'
+        });
+    });
+</script>
+
+
+			
         </div>
     </div>
 
     <script>
-        function playVideo() {
-            const video = document.getElementById('myVideo');
-            const image = document.querySelector('.character-image');
+        function playVideo(videoID, imageID) {
+            const video = document.getElementById(videoID);
+            const image = document.getElementById(imageID);
             video.style.display = 'block';
             image.style.display = 'none';
             video.play();
         }
 
-        function hideVideo() {
-            const video = document.getElementById('myVideo');
-            const image = document.querySelector('.character-image');
+        function hideVideo(videoID, imageID) {
+            const video = document.getElementById(videoID);
+            const image = document.getElementById(imageID);
             video.style.display = 'none';
             image.style.display = 'block';
         }
 
-        const playButton = document.getElementById('playButton');
-        playButton.addEventListener('click', (event) => {
+        document.getElementById('playButton1').addEventListener('click', (event) => {
             event.stopPropagation(); // 阻止事件冒泡
-            playVideo();
+            playVideo('myVideo1', 'character-image1');
         });
 
-        const characterCard = document.querySelector('.character-card');
-        characterCard.addEventListener('click', () => {
-            characterCard.classList.toggle('clicked');
+        document.getElementById('playButton2').addEventListener('click', (event) => {
+            event.stopPropagation(); // 阻止事件冒泡
+            playVideo('myVideo2', 'character-image1');
+        });
+		
+		document.getElementById('playButton3').addEventListener('click', (event) => {
+            event.stopPropagation(); // 阻止事件冒泡
+            playVideo('myVideo3', 'character-image1');
+        });
+		
+		document.getElementById('playButton4').addEventListener('click', (event) => {
+            event.stopPropagation(); // 阻止事件冒泡
+            playVideo('myVideo4', 'character-image1');
+        });
+		
+		document.getElementById('playButton5').addEventListener('click', (event) => {
+            event.stopPropagation(); // 阻止事件冒泡
+            playVideo('myVideo5', 'character-image1');
+        });
+		
+		document.getElementById('playButton6').addEventListener('click', (event) => {
+            event.stopPropagation(); // 阻止事件冒泡
+            playVideo('myVideo6', 'character-image1');
+        });
+				document.getElementById('playButton7').addEventListener('click', (event) => {
+            event.stopPropagation(); // 阻止事件冒泡
+            playVideo('myVideo7', 'character-image1');
+        });
+				document.getElementById('playButton8').addEventListener('click', (event) => {
+            event.stopPropagation(); // 阻止事件冒泡
+            playVideo('myVideo8', 'character-image1');
+        });
+				document.getElementById('playButton9').addEventListener('click', (event) => {
+            event.stopPropagation(); // 阻止事件冒泡
+            playVideo('myVideo9', 'character-image1');
+        });
+
+        const characterCards = document.querySelectorAll('.character-card');
+        characterCards.forEach((card) => {
+            card.addEventListener('click', () => {
+                card.classList.toggle('clicked');
+            });
         });
     </script>
 </body>
